--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -34,11 +34,10 @@ $app-direction: ltr;
 // The "primary" color is the only required color in the map.
 
 $colors: (
-  primary:    #b065cf,
-  secondary:  #32db64,
-  danger:     #f53d3d,
-  light:      #f4f4f4,
-  dark:       #222
+  primary:    #0c9abe,
+  secondary:  #29b6c5,
+  danger:     #c64840,
+  light:      #eceeee,
 );
 
 
